osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_rules/test_rules_must_be_stored_in_variables.txt
3 errors occurred while validating:
[1/3] error: `Rule(...)` must be assigned to a variable
--> main.sml:3:0
     |
   3 | Rule(when_all=[True], description='')
     | ^ assign it to a variable before using it:
       | `SomeRule = Rule(when_all=[True], description='')`
[2/3] error: `Rule(...)` must be assigned to a variable
--> main.sml:5:15
     |
   5 |     rules_any=[Rule(when_all=[True], description='')],
     |                ^ assign it to a variable before using it:
                      | `SomeRule = Rule(when_all=[True], description='')`
                      | `WhenRules(rules_any=[SomeRule], then=[LabelAdd(entity=E, label='foo')])`
[3/3] error: rules must be stored in non-local features
--> main.sml:8:0
     |
   8 | _Local = Rule(when_all=[True], description='')
     | ^ this rule is being stored in the local variable `_Local`
       | rules must be in non-local features (eg that don't start with `_`)